@@ -41,10 +41,7 @@ import ch.bedag.dap.hellodata.commons.sidecars.modules.ModuleResourceKind;
 import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.dashboard.DashboardResource;
 import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.dashboard.response.superset.SupersetDashboard;
 import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.role.superset.response.SupersetRole;
-import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.user.data.SubsystemUser;
-import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.user.data.SubsystemUserDelete;
-import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.user.data.SubsystemUserUpdate;
-import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.user.data.UserContextRoleUpdate;
+import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.user.data.*;
 import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.user.request.DashboardForUserDto;
 import ch.bedag.dap.hellodata.commons.sidecars.resources.v1.user.request.SupersetDashboardsForUserUpdate;
 import ch.bedag.dap.hellodata.portal.email.service.EmailNotificationService;
@@ -62,12 +59,13 @@ import jakarta.persistence.EntityExistsException;
 import jakarta.ws.rs.NotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
+import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.BooleanUtils;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
@@ -129,6 +127,10 @@ public class UserService {
         userEntity.setId(UUID.fromString(keycloakUserId));
         userEntity.setEmail(email);
         userEntity.setUsername(userFoundInKeycloak == null ? email : userFoundInKeycloak.getUsername());
+        userEntity.setFirstName(userFoundInKeycloak == null ? firstName : userFoundInKeycloak.getFirstName());
+        userEntity.setLastName(userFoundInKeycloak == null ? lastName : userFoundInKeycloak.getLastName());
+        userEntity.setEnabled(true);
+        userEntity.setSuperuser(false);
         userRepository.saveAndFlush(userEntity);
         roleService.setBusinessDomainRoleForUser(userEntity, HdRoleName.NONE);
         roleService.setAllDataDomainRolesForUser(userEntity, HdRoleName.NONE);
@@ -136,6 +138,7 @@ public class UserService {
         return keycloakUserId;
     }
 
+    @Transactional(readOnly = true)
     public void validateEmailAlreadyExists(String email) {
         Optional<UserEntity> userEntityByEmail = userRepository.findUserEntityByEmailIgnoreCase(email);
         if (userEntityByEmail.isPresent()) {
@@ -143,69 +146,64 @@ public class UserService {
         }
     }
 
+    @Transactional(readOnly = true)
     public boolean isUserDisabled(String userId) {
-        String authUserId = getAuthUserId(userId);
-        return keycloakService.isUserDisabled(authUserId);
+        UserEntity userEntity = getUserEntity(userId);
+        return !userEntity.isEnabled();
     }
 
     @Transactional(propagation = Propagation.REQUIRES_NEW)
     public void syncAllUsers() {
-        List<UserDto> allUsers = getAllUsers().stream().filter(UserDto::getEnabled).toList();
+        List<UserDto> allUsers = userRepository.getUserEntitiesByEnabled(true).stream().map(this::map).toList();
         log.info("[syncAllUsers] Found {} users to sync with surrounding systems.", allUsers.size());
         AtomicInteger counter = new AtomicInteger();
-        allUsers.forEach(u -> {
-            try {
-                UserEntity userEntity;
-                UUID id = UUID.fromString(u.getId());
-                if (!userRepository.existsByIdOrAuthId(id, id.toString())) {
-                    userEntity = new UserEntity();
-                    userEntity.setId(id);
-                    userEntity.setEmail(u.getEmail());
-                    userRepository.saveAndFlush(userEntity);
+        List<UserContextRoleUpdate> list = allUsers.stream().map(user -> {
+            UserEntity userEntity;
+            UUID id = UUID.fromString(user.getId());
+            if (!userRepository.existsByIdOrAuthId(id, id.toString())) {
+                userEntity = new UserEntity();
+                userEntity.setId(id);
+                userEntity.setEmail(user.getEmail());
+                userRepository.saveAndFlush(userEntity);
+                roleService.createNoneContextRoles(userEntity);
+            } else {
+                userEntity = getUserEntity(id);
+                if (CollectionUtils.isEmpty(userEntity.getContextRoles())) {
                     roleService.createNoneContextRoles(userEntity);
-                } else {
-                    userEntity = userRepository.getByIdOrAuthId(id.toString());
-                    if (CollectionUtils.isEmpty(userEntity.getContextRoles())) {
-                        roleService.createNoneContextRoles(userEntity);
-                    }
                 }
-                createUserInSubsystems(u.getId());
-                synchronizeContextRolesWithSubsystems(userEntity);
-                counter.getAndIncrement();
-            } catch (Exception e) {
-                log.error("Could not sync user {} with subsystems", u.getEmail(), e);
             }
-        });
-        log.info("Synchronized {} out of {} users with subsystems.", counter.get(), allUsers.size());
+            boolean isLast = counter.incrementAndGet() == allUsers.size();
+            return getUserContextRoleUpdate(userEntity, isLast);
+        }).collect(Collectors.toList());
+        List<List<UserContextRoleUpdate>> partition = partitionToBatches(list);
+
+        // Proceed with publishing the partitions
+        for (List<UserContextRoleUpdate> batch : partition) {
+            UsersContextRoleUpdate usersContextRoleUpdate = new UsersContextRoleUpdate();
+            usersContextRoleUpdate.setUserContextRoleUpdates(batch);
+            natsSenderService.publishMessageToJetStream(HDEvent.SYNC_USERS, usersContextRoleUpdate);
+            log.info("[syncUsers] Synchronized batch of {} users.", batch.size());
+        }
+        log.info("[syncAllUsers] Synchronized {} out of {} users with subsystems.", counter.get(), allUsers.size());
     }
 
     @Transactional(readOnly = true)
     public List<UserDto> getAllUsers() {
         List<UserEntity> allPortalUsers = userRepository.findAll();
-        List<UserRepresentation> userRepresentationList = new ArrayList<>();
-        for (UserEntity user : allPortalUsers) {
-            UserRepresentation userRepresentationById = getUserRepresentation(user);
-            if (userRepresentationById != null) {
-                userRepresentationList.add(userRepresentationById);
-            }
-        }
-        return userRepresentationList.stream()
-                .filter(userRepresentation -> userRepresentation.getEmail() != null)
-                .map(userRepresentation -> modelMapper.map(userRepresentation, UserDto.class))
-                .map(userDto -> fetchAdditionalDataFromPortal(userDto,
-                        allPortalUsers.stream().filter(userEntity -> idEquals(userDto, userEntity)).findFirst()))
-                .toList();
+        return allPortalUsers.stream()
+                .map(this::map)
+                .collect(Collectors.toList());
     }
 
-    @Nullable
-    private UserRepresentation getUserRepresentation(UserEntity user) {
-        UserRepresentation userRepresentationById = null;
-        try {
-            userRepresentationById = getUserRepresentation(user.getId().toString());
-        } catch (Exception e) {
-            log.error("Error fetching user from the keycloak, user portal id : {}, email {}. Is user deleted in the keycloak?", user.getId(), user.getEmail());
+    @Transactional(readOnly = true)
+    public Page<UserDto> getAllUsersPageable(Pageable pageable, String search) {
+        Page<UserEntity> allPortalUsers;
+        if (search == null || search.isEmpty()) {
+            allPortalUsers = userRepository.findAll(pageable);
+        } else {
+            allPortalUsers = userRepository.findAll(pageable, search);
         }
-        return userRepresentationById;
+        return allPortalUsers.map(this::map);
     }
 
     @Transactional
@@ -233,44 +231,33 @@ public class UserService {
 
     @Transactional(readOnly = true)
     public UserDto getUserById(String userId) {
-        UserRepresentation representation = getUserRepresentation(userId);
-        UserDto userDto = modelMapper.map(representation, UserDto.class);
-        fetchAdditionalDataFromPortal(userDto);
-        return userDto;
+        UserEntity userEntity = getUserEntity(userId);
+        return map(userEntity);
     }
 
     @Transactional
     public void updateLastAccess(String userId) {
-        UserEntity userEntity = getUserEntity(UUID.fromString(userId));
+        UserEntity userEntity = getUserEntity(userId);
         userEntity.setLastAccess(LocalDateTime.now());
         userRepository.save(userEntity);
     }
 
+    @Transactional(readOnly = true)
     public void createUserInSubsystems(String userId) {
         SubsystemUserUpdate createUser = getSubsystemUserUpdate(userId);
+        createUser.setSendBackUsersList(false);
         natsSenderService.publishMessageToJetStream(HDEvent.CREATE_USER, createUser);
     }
 
-    private SubsystemUserUpdate getSubsystemUserUpdate(UserRepresentation representation) {
-        SubsystemUserUpdate createUser = new SubsystemUserUpdate();
-        createUser.setFirstName(representation.getFirstName());
-        createUser.setLastName(representation.getLastName());
-        createUser.setUsername(representation.getUsername());
-        createUser.setEmail(representation.getEmail().toLowerCase(Locale.ROOT));
-        createUser.setActive(representation.isEnabled());
-        return createUser;
-    }
-
-    private SubsystemUserUpdate getSubsystemUserUpdate(String userId) {
-        UserRepresentation representation = getUserRepresentation(userId);
-        return getSubsystemUserUpdate(representation);
-    }
-
     @Transactional
-    public void disableUserById(String userId) {
+    public UserDto disableUserById(String userId) {
         UUID dbId = UUID.fromString(userId);
         validateNotAllowedIfCurrentUserIsNotSuperuser(dbId);
-        UserResource userResource = getUserResource(userId);
+        UserEntity userEntity = getUserEntity(userId);
+        userEntity.setEnabled(false);
+        userRepository.save(userEntity);
+        String authUserId = getAuthUserId(userId);
+        UserResource userResource = keycloakService.getUserResourceById(authUserId);
         UserRepresentation representation = userResource.toRepresentation();
         representation.setEnabled(false);
         userResource.update(representation);
@@ -278,23 +265,28 @@ public class UserService {
         SubsystemUserUpdate subsystemUserUpdate = getSubsystemUserUpdate(representation);
         subsystemUserUpdate.setActive(false);
         natsSenderService.publishMessageToJetStream(HDEvent.DISABLE_USER, subsystemUserUpdate);
-        emailNotificationService.notifyAboutUserDeactivation(representation.getFirstName(), representation.getEmail());
+        emailNotificationService.notifyAboutUserDeactivation(representation.getFirstName(), representation.getEmail(), getSelectedLanguageByEmail(representation.getEmail()));
+        return map(userEntity);
     }
 
     @Transactional
-    public void enableUserById(String userId) {
+    public UserDto enableUserById(String userId) {
         UUID dbId = UUID.fromString(userId);
         validateNotAllowedIfCurrentUserIsNotSuperuser(dbId);
-        UserResource userResource = getUserResource(userId);
+        String authUserId = getAuthUserId(userId);
+        UserResource userResource = keycloakService.getUserResourceById(authUserId);
         UserRepresentation representation = userResource.toRepresentation();
         representation.setEnabled(true);
         userResource.update(representation);
         SubsystemUserUpdate subsystemUserUpdate = getSubsystemUserUpdate(representation);
         subsystemUserUpdate.setActive(true);
         natsSenderService.publishMessageToJetStream(HDEvent.ENABLE_USER, subsystemUserUpdate);
-        UserEntity userEntity = userRepository.getByIdOrAuthId(userId);
+        UserEntity userEntity = getUserEntity(userId);
+        userEntity.setEnabled(true);
+        userRepository.saveAndFlush(userEntity);
         synchronizeContextRolesWithSubsystems(userEntity);
-        emailNotificationService.notifyAboutUserActivation(representation.getFirstName(), representation.getEmail());
+        emailNotificationService.notifyAboutUserActivation(representation.getFirstName(), representation.getEmail(), userEntity.getSelectedLanguage());
+        return map(userEntity);
     }
 
     @Transactional(readOnly = true)
@@ -302,7 +294,7 @@ public class UserService {
         DashboardsDto result = new DashboardsDto();
         result.setDashboards(new ArrayList<>());
         List<MetaInfoResourceEntity> dashboardsWithContext = metaInfoResourceService.findAllByKindWithContext(ModuleResourceKind.HELLO_DATA_DASHBOARDS);
-        UserEntity userEntity = userRepository.getByIdOrAuthId(userId);
+        UserEntity userEntity = getUserEntity(userId);
         for (MetaInfoResourceEntity dashboardWithContext : dashboardsWithContext) {
             if (dashboardWithContext.getMetainfo() instanceof DashboardResource dashboardResource) {
                 SubsystemUser subsystemUser = metaInfoResourceService.findUserInInstance(userEntity.getEmail(), dashboardResource.getInstanceName());
@@ -331,83 +323,12 @@ public class UserService {
     public void updateContextRolesForUser(UUID userId, UpdateContextRolesForUserDto updateContextRolesForUserDto) {
         updateContextRoles(userId, updateContextRolesForUserDto);
         synchronizeDashboardsForUser(userId, updateContextRolesForUserDto.getSelectedDashboardsForUser());
-        UserEntity userEntity = userRepository.getByIdOrAuthId(userId.toString());
+        UserEntity userEntity = getUserEntity(userId);
         synchronizeContextRolesWithSubsystems(userEntity);
         notifyUserViaEmail(userId, updateContextRolesForUserDto);
     }
 
-    private void updateContextRoles(UUID userId, UpdateContextRolesForUserDto updateContextRolesForUserDto) {
-        UserEntity userEntity = getUserEntity(userId);
-        if (updateContextRolesForUserDto.getBusinessDomainRole() != null) {
-            roleService.updateBusinessRoleForUser(userEntity, updateContextRolesForUserDto.getBusinessDomainRole());
-        } else {
-            roleService.setBusinessDomainRoleForUser(userEntity, HdRoleName.NONE);
-        }
-
-        if (!updateContextRolesForUserDto.getBusinessDomainRole().getName().equalsIgnoreCase(HdRoleName.NONE.name())) {
-            roleService.setAllDataDomainRolesForUser(userEntity, HdRoleName.DATA_DOMAIN_ADMIN);
-        } else if (!CollectionUtils.isEmpty(updateContextRolesForUserDto.getDataDomainRoles())) {
-            for (UserContextRoleDto dataDomainRoleForContextDto : updateContextRolesForUserDto.getDataDomainRoles()) {
-                roleService.updateDomainRoleForUser(userEntity, dataDomainRoleForContextDto.getRole(), dataDomainRoleForContextDto.getContext().getContextKey());
-            }
-            setRoleForAllRemainingDataDomainsToNone(updateContextRolesForUserDto, userEntity);
-        }
-        userRepository.save(userEntity);
-    }
-
-    private void setRoleForAllRemainingDataDomainsToNone(UpdateContextRolesForUserDto updateContextRolesForUserDto, UserEntity userEntity) {
-        List<HdContextEntity> allDataDomains = contextRepository.findAllByTypeIn(List.of(HdContextType.DATA_DOMAIN));
-        List<HdContextEntity> ddDomainsWithoutRoleForUser = allDataDomains.stream()
-                .filter(availableDD -> updateContextRolesForUserDto.getDataDomainRoles()
-                        .stream()
-                        .noneMatch(ddRole -> ddRole.getContext()
-                                .getContextKey()
-                                .equalsIgnoreCase(
-                                        availableDD.getContextKey())))
-                .toList();
-        if (!ddDomainsWithoutRoleForUser.isEmpty()) {
-            Optional<RoleDto> first = roleService.getAll().stream().filter(roleDto -> HdRoleName.NONE.name().equalsIgnoreCase(roleDto.getName())).findFirst();
-            if (first.isPresent()) {
-                RoleDto noneRole = first.get();
-                for (HdContextEntity dataDomain : ddDomainsWithoutRoleForUser) {
-                    roleService.updateDomainRoleForUser(userEntity, noneRole, dataDomain.getContextKey());
-                }
-            }
-        }
-    }
-
-    private void notifyUserViaEmail(UUID userId, UpdateContextRolesForUserDto updateContextRolesForUserDto) {
-        UserEntity userEntity = userRepository.getByIdOrAuthId(userId.toString());
-        UserRepresentation representation = getUserRepresentation(userId.toString());
-        List<UserContextRoleDto> adminContextRoles = getAdminContextRoles(userEntity);
-        if (!userEntity.isCreationEmailSent()) {
-            emailNotificationService.notifyAboutUserCreation(representation.getFirstName(), representation.getEmail(), updateContextRolesForUserDto, adminContextRoles);
-            userEntity.setCreationEmailSent(true);
-            userRepository.save(userEntity);
-        } else {
-            emailNotificationService.notifyAboutUserRoleChanged(representation.getFirstName(), representation.getEmail(), updateContextRolesForUserDto, adminContextRoles);
-        }
-    }
-
-    private List<UserContextRoleDto> getAdminContextRoles(UserEntity userEntity) {
-        return userEntity.getContextRoles().stream().filter(contextRole -> contextRole.getRole().getName() == HdRoleName.DATA_DOMAIN_ADMIN).map(adminContextRole -> {
-            Optional<HdContextEntity> contextResult = contextRepository.getByContextKey(adminContextRole.getContextKey());
-            if (contextResult.isPresent()) {
-                HdContextEntity context = contextResult.get();
-                ContextDto contextDto = new ContextDto();
-                contextDto.setContextKey(context.getContextKey());
-                contextDto.setName(context.getName());
-                UserContextRoleDto userContextRoleDto = new UserContextRoleDto();
-                userContextRoleDto.setContext(contextDto);
-                RoleDto roleDto = new RoleDto();
-                roleDto.setName(adminContextRole.getRole().getName().name());
-                userContextRoleDto.setRole(roleDto);
-                return userContextRoleDto;
-            }
-            return null;
-        }).filter(Objects::nonNull).toList();
-    }
-
+    @Transactional(readOnly = true)
     public List<UserContextRoleDto> getContextRolesForUser(UUID userId) {
         List<UserContextRoleDto> result = new ArrayList<>();
         UserEntity userEntity = getUserEntity(userId);
@@ -422,127 +343,18 @@ public class UserService {
         return result;
     }
 
-    private void synchronizeDashboardsForUser(UUID userId, Map<String, List<DashboardForUserDto>> selectedDashboardsForUser) {
-        for (Map.Entry<String, List<DashboardForUserDto>> entry : selectedDashboardsForUser.entrySet()) {
-            String contextKey = entry.getKey();
-            String supersetInstanceName = metaInfoResourceService.findSupersetInstanceNameByContextKey(contextKey);
-            updateDashboardRoleForUser(userId, entry.getValue(), supersetInstanceName);
-        }
-    }
-
-    private void updateDashboardRoleForUser(UUID userId, List<DashboardForUserDto> dashboardForUserDtoList, String supersetInstanceName) {
-        try {
-            SupersetDashboardsForUserUpdate supersetDashboardsForUserUpdate = new SupersetDashboardsForUserUpdate();
-            UserEntity userEntity = getUserEntity(userId);
-            SubsystemUser userInInstance = metaInfoResourceService.findUserInInstance(userEntity.getEmail(), supersetInstanceName);
-            if (userInInstance != null) {
-                supersetDashboardsForUserUpdate.setSupersetUserId(userInInstance.getId());
-                supersetDashboardsForUserUpdate.setDashboards(dashboardForUserDtoList);
-                String subject = SlugifyUtil.slugify(supersetInstanceName + RequestReplySubject.UPDATE_DASHBOARD_ROLES_FOR_USER.getSubject());
-                log.info("[updateDashboardRoleForUser] Sending request to subject: {}", subject);
-                Message reply =
-                        connection.request(subject, objectMapper.writeValueAsString(supersetDashboardsForUserUpdate).getBytes(StandardCharsets.UTF_8), Duration.ofSeconds(10));
-                if (reply == null) {
-                    log.warn("Reply is null, please verify superset sidecar or nats connection");
-                } else {
-                    reply.ack();
-                    log.info("[updateDashboardRoleForUser] Response received: " + new String(reply.getData()));
-                }
-            } else {
-                log.error("User {} not found in superset instance {}!", userEntity.getEmail(), supersetInstanceName);
-            }
-        } catch (Exception e) {
-            log.error("Error updating dashboard role for user", e);
-            if (e instanceof InterruptedException) {
-                Thread.currentThread().interrupt(); // Re-interrupt the thread
-            }
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error updating user", e);
-        }
+    @Transactional
+    public void synchronizeContextRolesWithSubsystems(UserEntity userEntity, boolean sendBackUsersList) {
+        UserContextRoleUpdate userContextRoleUpdate = getUserContextRoleUpdate(userEntity, sendBackUsersList);
+        natsSenderService.publishMessageToJetStream(HDEvent.UPDATE_USER_CONTEXT_ROLE, userContextRoleUpdate);
     }
 
     @Transactional
     public void synchronizeContextRolesWithSubsystems(UserEntity userEntity) {
-        UserContextRoleUpdate userContextRoleUpdate = new UserContextRoleUpdate();
-        userContextRoleUpdate.setEmail(userEntity.getEmail());
-        userContextRoleUpdate.setUsername(userEntity.getUsername());
-        List<UserContextRoleEntity> allContextRolesForUser = roleService.getAllContextRolesForUser(userEntity);
-        List<UserContextRoleUpdate.ContextRole> contextRoles = new ArrayList<>();
-        allContextRolesForUser.forEach(contextRoleForUser -> {
-            UserContextRoleUpdate.ContextRole contextRole = new UserContextRoleUpdate.ContextRole();
-            contextRole.setContextKey(contextRoleForUser.getContextKey());
-            contextRole.setRoleName(contextRoleForUser.getRole().getName());
-            Optional<HdContextEntity> byContextKey = contextRepository.getByContextKey(contextRoleForUser.getContextKey());
-            byContextKey.ifPresent(contextEntity -> contextRole.setParentContextKey(contextRole.getParentContextKey()));
-            contextRoles.add(contextRole);
-        });
-        userContextRoleUpdate.setContextRoles(contextRoles);
-        natsSenderService.publishMessageToJetStream(HDEvent.UPDATE_USER_CONTEXT_ROLE, userContextRoleUpdate);
+        synchronizeContextRolesWithSubsystems(userEntity, true);
     }
 
-    private DashboardForUserDto createDashboardDto(DashboardResource dashboardResource, SubsystemUser subsystemUser, SupersetDashboard supersetDashboard, String contextKey) {
-        String dashboardTitle = supersetDashboard.getDashboardTitle();
-        SupersetRole supersetRole = supersetDashboard.getRoles().stream().filter(role -> role.getName().startsWith(DASHBOARD_ROLE_PREFIX)).findFirst().orElse(null);
-        boolean userHasSlugifyDashboardRole = false;
-        if (supersetRole != null && subsystemUser != null) {
-            userHasSlugifyDashboardRole = subsystemUser.getRoles().contains(supersetRole);
-        }
-        DashboardForUserDto dashboardForUserDto = new DashboardForUserDto();
-        dashboardForUserDto.setId(supersetDashboard.getId());
-        dashboardForUserDto.setTitle(dashboardTitle);
-        if (subsystemUser != null) {
-            boolean userHasDashboardViewerRole = subsystemUser.getRoles().stream().anyMatch(role -> role.getName().equalsIgnoreCase(SlugifyUtil.BI_VIEWER_ROLE_NAME));
-            dashboardForUserDto.setInstanceUserId(subsystemUser.getId());
-            dashboardForUserDto.setViewer(userHasSlugifyDashboardRole && userHasDashboardViewerRole);
-        }
-        dashboardForUserDto.setInstanceName(dashboardResource.getMetadata().instanceName());
-        dashboardForUserDto.setChangedOnUtc(supersetDashboard.getChangedOnUtc());
-        dashboardForUserDto.setCompositeId(dashboardResource.getMetadata().instanceName() + "_" + supersetDashboard.getId());
-        dashboardForUserDto.setContextKey(contextKey);
-        return dashboardForUserDto;
-    }
-
-    private void fetchAdditionalDataFromPortal(UserDto userDto) {
-        Optional<UserEntity> userEntityResult = Optional.of(getUserEntity(UUID.fromString(userDto.getId())));
-        fetchAdditionalDataFromPortal(userDto, userEntityResult);
-    }
-
-    private UserDto fetchAdditionalDataFromPortal(UserDto userDto, Optional<UserEntity> userEntityResult) {
-        if (userEntityResult.isPresent()) {
-            UserEntity userEntity = userEntityResult.get();
-            userDto.setInvitationsCount(userEntity.getInvitationsCount());
-            fetchLastAccess(userDto, userEntity.getLastAccess());
-            userDto.setSuperuser(userEntity.getSuperuser());
-            if (BooleanUtils.isTrue(userEntity.getSuperuser())) {
-                userDto.setPermissions(Arrays.stream(Permission.values()).map(Enum::name).toList());
-            } else {
-                List<String> portalPermissions = userEntity.getPermissionsFromAllRoles();
-                if (portalPermissions != null) {
-                    userDto.setPermissions(portalPermissions);
-                }
-            }
-        }
-        return userDto;
-    }
-
-    private void fetchLastAccess(UserDto userDto, LocalDateTime lastAccess) {
-        if (lastAccess != null) {
-            ZonedDateTime zdt = ZonedDateTime.of(lastAccess, ZoneId.systemDefault());
-            userDto.setLastAccess(zdt.toInstant().toEpochMilli());
-        }
-    }
-
-    /**
-     * Only superuser can enable/disable other superusers
-     *
-     * @param userId user id
-     */
-    private void validateNotAllowedIfCurrentUserIsNotSuperuser(UUID userId) {
-        UserEntity targetUser = getUserEntity(userId);
-        if (!SecurityUtils.isSuperuser() && targetUser.getSuperuser()) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not allowed if userId belongs to a superuser");
-        }
-    }
-
+    @Transactional(readOnly = true)
     public Set<String> getUserPortalPermissions(UUID userId) {
         UserEntity userEntity = getUserEntity(userId);
         if (BooleanUtils.isTrue(userEntity.getSuperuser())) {
@@ -600,7 +412,276 @@ public class UserService {
         return extractDomainsFromContextRoles(userEntity.getContextRoles());
     }
 
-    @NotNull
+    @Transactional(readOnly = true)
+    public List<UserEntity> findHelloDataAdminUsers() {
+        return userRepository.findUsersByHdRoleName(HdRoleName.BUSINESS_DOMAIN_ADMIN).stream().filter(userEntity -> userEntity.isEnabled()).toList();
+    }
+
+    @Transactional
+    public void setSelectedLanguage(String userId, Locale lang) {
+        UserEntity userEntity = getUserEntity(userId);
+        if (!userEntity.getId().equals(SecurityUtils.getCurrentUserId())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN);
+        }
+        userEntity.setSelectedLanguage(lang);
+        userRepository.save(userEntity);
+    }
+
+    @Transactional(readOnly = true)
+    public Locale getSelectedLanguage(String userId) {
+        UserEntity userEntity = getUserEntity(userId);
+        return userEntity.getSelectedLanguage();
+    }
+
+    @Transactional(readOnly = true)
+    public Locale getSelectedLanguageByEmail(String email) {
+        return userRepository.findSelectedLanguageByEmail(email);
+    }
+
+    /**
+     * partition list to batches and leave the last one as the biggest one, because it will trigger users list pushback
+     */
+    private List<List<UserContextRoleUpdate>> partitionToBatches(List<UserContextRoleUpdate> list) {
+        List<List<UserContextRoleUpdate>> partition = new ArrayList<>(ListUtils.partition(list, 25));
+
+        // Check if we have at least three partitions
+        if (partition.size() >= 3) {
+            // Remove the last three partitions
+            List<UserContextRoleUpdate> lastPartition = partition.remove(partition.size() - 1);
+            List<UserContextRoleUpdate> secondLastPartition = partition.remove(partition.size() - 1);
+            List<UserContextRoleUpdate> thirdLastPartition = partition.remove(partition.size() - 1);
+
+            // Merge the last three partitions into one
+            List<UserContextRoleUpdate> mergedPartition = new ArrayList<>();
+            mergedPartition.addAll(thirdLastPartition);
+            mergedPartition.addAll(secondLastPartition);
+            mergedPartition.addAll(lastPartition);
+
+            // Add the merged partition back to the list
+            partition.add(mergedPartition);
+        }
+        return partition;
+    }
+
+    private UserContextRoleUpdate getUserContextRoleUpdate(UserEntity userEntity, boolean sendBackUsersList) {
+        UserContextRoleUpdate userContextRoleUpdate = new UserContextRoleUpdate();
+        userContextRoleUpdate.setEmail(userEntity.getEmail());
+        userContextRoleUpdate.setUsername(userEntity.getUsername());
+        userContextRoleUpdate.setFirstName(userEntity.getFirstName());
+        userContextRoleUpdate.setLastName(userEntity.getLastName());
+        userContextRoleUpdate.setActive(userEntity.isEnabled());
+        List<UserContextRoleEntity> allContextRolesForUser = roleService.getAllContextRolesForUser(userEntity);
+        List<UserContextRoleUpdate.ContextRole> contextRoles = new ArrayList<>();
+        allContextRolesForUser.forEach(contextRoleForUser -> {
+            UserContextRoleUpdate.ContextRole contextRole = new UserContextRoleUpdate.ContextRole();
+            contextRole.setContextKey(contextRoleForUser.getContextKey());
+            contextRole.setRoleName(contextRoleForUser.getRole().getName());
+            Optional<HdContextEntity> byContextKey = contextRepository.getByContextKey(contextRoleForUser.getContextKey());
+            byContextKey.ifPresent(contextEntity -> contextRole.setParentContextKey(contextRole.getParentContextKey()));
+            contextRoles.add(contextRole);
+        });
+        userContextRoleUpdate.setContextRoles(contextRoles);
+        userContextRoleUpdate.setSendBackUsersList(sendBackUsersList);
+        return userContextRoleUpdate;
+    }
+
+    private SubsystemUserUpdate getSubsystemUserUpdate(UserRepresentation representation) {
+        SubsystemUserUpdate createUser = new SubsystemUserUpdate();
+        createUser.setFirstName(representation.getFirstName());
+        createUser.setLastName(representation.getLastName());
+        createUser.setUsername(representation.getUsername());
+        createUser.setEmail(representation.getEmail().toLowerCase(Locale.ROOT));
+        createUser.setActive(representation.isEnabled());
+        return createUser;
+    }
+
+    private SubsystemUserUpdate getSubsystemUserUpdate(String userId) {
+        UserRepresentation representation = getUserRepresentation(userId);
+        return getSubsystemUserUpdate(representation);
+    }
+
+    private void updateContextRoles(UUID userId, UpdateContextRolesForUserDto updateContextRolesForUserDto) {
+        UserEntity userEntity = getUserEntity(userId);
+        if (updateContextRolesForUserDto.getBusinessDomainRole() != null) {
+            roleService.updateBusinessRoleForUser(userEntity, updateContextRolesForUserDto.getBusinessDomainRole());
+        } else {
+            roleService.setBusinessDomainRoleForUser(userEntity, HdRoleName.NONE);
+        }
+
+        if (!updateContextRolesForUserDto.getBusinessDomainRole().getName().equalsIgnoreCase(HdRoleName.NONE.name())) {
+            roleService.setAllDataDomainRolesForUser(userEntity, HdRoleName.DATA_DOMAIN_ADMIN);
+        } else if (!CollectionUtils.isEmpty(updateContextRolesForUserDto.getDataDomainRoles())) {
+            for (UserContextRoleDto dataDomainRoleForContextDto : updateContextRolesForUserDto.getDataDomainRoles()) {
+                roleService.updateDomainRoleForUser(userEntity, dataDomainRoleForContextDto.getRole(), dataDomainRoleForContextDto.getContext().getContextKey());
+            }
+            setRoleForAllRemainingDataDomainsToNone(updateContextRolesForUserDto, userEntity);
+        }
+        if (updateContextRolesForUserDto.getBusinessDomainRole().getName().equalsIgnoreCase(HdRoleName.HELLODATA_ADMIN.name())) {
+            userEntity.setSuperuser(true);
+        } else {
+            userEntity.setSuperuser(false);
+        }
+        userRepository.save(userEntity);
+    }
+
+    private void setRoleForAllRemainingDataDomainsToNone(UpdateContextRolesForUserDto updateContextRolesForUserDto, UserEntity userEntity) {
+        List<HdContextEntity> allDataDomains = contextRepository.findAllByTypeIn(List.of(HdContextType.DATA_DOMAIN));
+        List<HdContextEntity> ddDomainsWithoutRoleForUser = allDataDomains.stream()
+                .filter(availableDD -> updateContextRolesForUserDto.getDataDomainRoles()
+                        .stream()
+                        .noneMatch(ddRole -> ddRole.getContext()
+                                .getContextKey()
+                                .equalsIgnoreCase(
+                                        availableDD.getContextKey())))
+                .toList();
+        if (!ddDomainsWithoutRoleForUser.isEmpty()) {
+            Optional<RoleDto> first = roleService.getAll().stream().filter(roleDto -> HdRoleName.NONE.name().equalsIgnoreCase(roleDto.getName())).findFirst();
+            if (first.isPresent()) {
+                RoleDto noneRole = first.get();
+                for (HdContextEntity dataDomain : ddDomainsWithoutRoleForUser) {
+                    roleService.updateDomainRoleForUser(userEntity, noneRole, dataDomain.getContextKey());
+                }
+            }
+        }
+    }
+
+    private void notifyUserViaEmail(UUID userId, UpdateContextRolesForUserDto updateContextRolesForUserDto) {
+        UserEntity userEntity = getUserEntity(userId);
+        UserRepresentation representation = getUserRepresentation(userId.toString());
+        List<UserContextRoleDto> adminContextRoles = getAdminContextRoles(userEntity);
+        if (!userEntity.isCreationEmailSent()) {
+            emailNotificationService.notifyAboutUserCreation(representation.getFirstName(), representation.getEmail(), updateContextRolesForUserDto, adminContextRoles, userEntity.getSelectedLanguage());
+            userEntity.setCreationEmailSent(true);
+            userRepository.save(userEntity);
+        } else {
+            emailNotificationService.notifyAboutUserRoleChanged(representation.getFirstName(), representation.getEmail(), updateContextRolesForUserDto, adminContextRoles, userEntity.getSelectedLanguage());
+        }
+    }
+
+    private List<UserContextRoleDto> getAdminContextRoles(UserEntity userEntity) {
+        return userEntity.getContextRoles().stream().filter(contextRole -> contextRole.getRole().getName() == HdRoleName.DATA_DOMAIN_ADMIN).map(adminContextRole -> {
+            Optional<HdContextEntity> contextResult = contextRepository.getByContextKey(adminContextRole.getContextKey());
+            if (contextResult.isPresent()) {
+                HdContextEntity context = contextResult.get();
+                ContextDto contextDto = new ContextDto();
+                contextDto.setContextKey(context.getContextKey());
+                contextDto.setName(context.getName());
+                UserContextRoleDto userContextRoleDto = new UserContextRoleDto();
+                userContextRoleDto.setContext(contextDto);
+                RoleDto roleDto = new RoleDto();
+                roleDto.setName(adminContextRole.getRole().getName().name());
+                userContextRoleDto.setRole(roleDto);
+                return userContextRoleDto;
+            }
+            return null;
+        }).filter(Objects::nonNull).toList();
+    }
+
+    private void synchronizeDashboardsForUser(UUID userId, Map<String, List<DashboardForUserDto>> selectedDashboardsForUser) {
+        for (Map.Entry<String, List<DashboardForUserDto>> entry : selectedDashboardsForUser.entrySet()) {
+            String contextKey = entry.getKey();
+            String supersetInstanceName = metaInfoResourceService.findSupersetInstanceNameByContextKey(contextKey);
+            updateDashboardRoleForUser(userId, entry.getValue(), supersetInstanceName);
+        }
+    }
+
+    private void updateDashboardRoleForUser(UUID userId, List<DashboardForUserDto> dashboardForUserDtoList, String supersetInstanceName) {
+        try {
+            SupersetDashboardsForUserUpdate supersetDashboardsForUserUpdate = new SupersetDashboardsForUserUpdate();
+            UserEntity userEntity = getUserEntity(userId);
+            SubsystemUser userInInstance = metaInfoResourceService.findUserInInstance(userEntity.getEmail(), supersetInstanceName);
+            if (userInInstance != null) {
+                supersetDashboardsForUserUpdate.setSupersetUserId(userInInstance.getId());
+                supersetDashboardsForUserUpdate.setSupersetUserName(userInInstance.getUsername());
+                supersetDashboardsForUserUpdate.setSupersetUserEmail(userInInstance.getEmail());
+                supersetDashboardsForUserUpdate.setDashboards(dashboardForUserDtoList);
+                supersetDashboardsForUserUpdate.setSupersetFirstName(userInInstance.getFirstName());
+                supersetDashboardsForUserUpdate.setSupersetLastName(userInInstance.getLastName());
+                supersetDashboardsForUserUpdate.setActive(userInInstance.isActive());
+                String subject = SlugifyUtil.slugify(supersetInstanceName + RequestReplySubject.UPDATE_DASHBOARD_ROLES_FOR_USER.getSubject());
+                log.info("[updateDashboardRoleForUser] Sending request to subject: {}", subject);
+                Message reply =
+                        connection.request(subject, objectMapper.writeValueAsString(supersetDashboardsForUserUpdate).getBytes(StandardCharsets.UTF_8), Duration.ofSeconds(10));
+                if (reply == null) {
+                    log.warn("Reply is null, please verify superset sidecar or nats connection");
+                } else {
+                    reply.ack();
+                    log.info("[updateDashboardRoleForUser] Response received: " + new String(reply.getData()));
+                }
+            } else {
+                log.error("User {} not found in superset instance {}!", userEntity.getEmail(), supersetInstanceName);
+            }
+        } catch (Exception e) {
+            log.error("Error updating dashboard role for user", e);
+            if (e instanceof InterruptedException) {
+                Thread.currentThread().interrupt(); // Re-interrupt the thread
+            }
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error updating user", e);
+        }
+    }
+
+    private DashboardForUserDto createDashboardDto(DashboardResource dashboardResource, SubsystemUser subsystemUser, SupersetDashboard supersetDashboard, String contextKey) {
+        String dashboardTitle = supersetDashboard.getDashboardTitle();
+        SupersetRole supersetRole = supersetDashboard.getRoles().stream().filter(role -> role.getName().startsWith(DASHBOARD_ROLE_PREFIX)).findFirst().orElse(null);
+        boolean userHasSlugifyDashboardRole = false;
+        if (supersetRole != null && subsystemUser != null) {
+            userHasSlugifyDashboardRole = subsystemUser.getRoles().contains(supersetRole);
+        }
+        DashboardForUserDto dashboardForUserDto = new DashboardForUserDto();
+        dashboardForUserDto.setId(supersetDashboard.getId());
+        dashboardForUserDto.setTitle(dashboardTitle);
+        if (subsystemUser != null) {
+            boolean userHasDashboardViewerRole = subsystemUser.getRoles().stream().anyMatch(role -> role.getName().equalsIgnoreCase(SlugifyUtil.BI_VIEWER_ROLE_NAME));
+            dashboardForUserDto.setInstanceUserId(subsystemUser.getId());
+            dashboardForUserDto.setViewer(userHasSlugifyDashboardRole && userHasDashboardViewerRole);
+        }
+        dashboardForUserDto.setInstanceName(dashboardResource.getMetadata().instanceName());
+        dashboardForUserDto.setChangedOnUtc(supersetDashboard.getChangedOnUtc());
+        dashboardForUserDto.setCompositeId(dashboardResource.getMetadata().instanceName() + "_" + supersetDashboard.getId());
+        dashboardForUserDto.setContextKey(contextKey);
+        return dashboardForUserDto;
+    }
+
+    private UserDto map(UserEntity userEntity) {
+        UserDto userDto = null;
+        if (userEntity != null) {
+            userDto = new UserDto();
+            userDto.setId(userEntity.getId().toString());
+            userDto.setEmail(userEntity.getEmail());
+            userDto.setUsername(userEntity.getUsername());
+            userDto.setEnabled(userEntity.isEnabled());
+            userDto.setSuperuser(userEntity.getSuperuser());
+            userDto.setInvitationsCount(userEntity.getInvitationsCount());
+            userDto.setFirstName(userEntity.getFirstName());
+            userDto.setLastName(userEntity.getLastName());
+            if (userEntity.getLastAccess() != null) {
+                ZonedDateTime zdt = ZonedDateTime.of(userEntity.getLastAccess(), ZoneId.systemDefault());
+                userDto.setLastAccess(zdt.toInstant().toEpochMilli());
+            }
+            if (BooleanUtils.isTrue(userEntity.getSuperuser())) {
+                userDto.setPermissions(Arrays.stream(Permission.values()).map(Enum::name).toList());
+            } else {
+                List<String> portalPermissions = userEntity.getPermissionsFromAllRoles();
+                if (portalPermissions != null) {
+                    userDto.setPermissions(portalPermissions);
+                }
+            }
+        }
+        return userDto;
+    }
+
+    /**
+     * Only superuser can enable/disable other superusers
+     *
+     * @param userId user id
+     */
+    private void validateNotAllowedIfCurrentUserIsNotSuperuser(UUID userId) {
+        UserEntity targetUser = getUserEntity(userId);
+        if (!SecurityUtils.isSuperuser() && targetUser.getSuperuser()) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not allowed if userId belongs to a superuser");
+        }
+    }
+
     private List<DataDomainDto> extractDomainsFromContextRoles(Set<UserContextRoleEntity> contextRoles) {
         List<DataDomainDto> result = new ArrayList<>();
         for (UserContextRoleEntity contextRole : contextRoles) {
@@ -629,31 +710,19 @@ public class UserService {
     }
 
     private String getAuthUserId(String userId) {
-        UserEntity userEntity = getUserEntity(UUID.fromString(userId));
+        UserEntity userEntity = getUserEntity(userId);
         return userEntity.getAuthId() == null ? userEntity.getId().toString() : userEntity.getAuthId();
     }
 
-    private boolean idEquals(UserDto userDto, UserEntity userEntity) {
-        return userEntity.getId().toString().equalsIgnoreCase(userDto.getId()) || userDto.getId().equalsIgnoreCase(userEntity.getAuthId());
+    private UserEntity getUserEntity(UUID userId) {
+        return getUserEntity(userId.toString());
     }
 
-    private UserEntity getUserEntity(UUID userId) {
-        UserEntity userEntity = userRepository.getByIdOrAuthId(userId.toString());
+    private UserEntity getUserEntity(String userId) {
+        UserEntity userEntity = userRepository.getByIdOrAuthId(userId);
         if (userEntity == null) {
             throw new NotFoundException(String.format("User %s not found in the DB", userId));
         }
         return userEntity;
-    }
-
-    public List<UserEntity> findHelloDataAdminUsers() {
-        List<UserEntity> portalUsers = userRepository.findUsersByHdRoleName(HdRoleName.BUSINESS_DOMAIN_ADMIN);
-        List<UserEntity> activeUsers = new ArrayList<>();
-        for (UserEntity currentUser : portalUsers) {
-            UserRepresentation userRepresentation = getUserRepresentation(currentUser);
-            if (userRepresentation != null && userRepresentation.isEnabled()) {
-                activeUsers.add(currentUser);
-            }
-        }
-        return activeUsers;
     }
 }
